--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -148,6 +148,7 @@
     <atricle c-news1>
         <section c-news1>
             <a href="https://news.ycombinator.com/"><i>HackerNews</i></a>
+            <a href="https://dev.to/"><i>dev.to</i></a>
             <a href="https://www.nngroup.com/articles/"><i>Jacob Nielsen</i></a>
             <a href="http://www.habrahabr.ru/" class=""><i>habrahabr</i></a>
             <a href="http://www.jvetrau.com/">jvetrau</a>
@@ -184,7 +185,7 @@
         </section>
         <section c-eg1>
             <figure>
-                <a b dh href="https://mail.google.com/mail/u/0/#inbox">Mail</a>
+                <a b dh href="https://mail.google.com/">Mail</a>
                 <a b dh href="https://egamings.slack.com/messages/@zl/">Slack</a>
                 <a b dh href="https://tracker.egamings.com/issues?assigned_to_id=me&per_page=100&set_filter=1&sort=priority%3Adesc%2Cupdated_on%3Adesc">Tasks</a>
             </figure>
