--- a/appZapp/design-eg-event.html
+++ b/appZapp/design-eg-event.html
@@ -141,6 +141,7 @@
             line-height: 1.25;
         }
         .egvent-welcome-logo {
+            width: 10em;
             max-width:  10em;
             padding-top: 1em;
         }
@@ -213,6 +214,12 @@
             }
         }
 
+        .egvent-welcome-intro-header {
+            display: flex;
+            justify-content: space-between;
+            align-content: flex-start;
+            align-items: flex-start;
+        }
     </style>
 
     <!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
@@ -222,16 +229,20 @@
 
     <div class="egvent-welcome-screen">
         <section class="egvent-welcome-intro">
-            <div class="content-block">
-                <figure class="egvent-welcome-coin">
-                    <img src="https://test.softgamings.com/content/uploads/pamp-fortuna-narrow.png" alt="Pamp Fortuna Gold, 5g">
-                </figure>
-                <h1>Enter an instant win giveaway</h1>
-                <p>Guaranteed prizes for all participants<br>and a chance to win the first prize<br>— <strong>The Gold Coin!</strong></p>
-                <p>Good luck!</p>
+            <div class="egvent-welcome-intro-header">
                 <figure class="egvent-welcome-logo">
                     <a href="https://www.softgamings.com/"><img src="https://www.softgamings.com/content/themes/softgamings/images/design/softgamings-logo.svg" alt="Softgamings"></a>
                 </figure>
+                <figure class="egvent-welcome-coin">
+                    <img src="https://test.softgamings.com/content/uploads/pamp-fortuna-narrow.png" alt="Pamp Fortuna Gold, 5g">
+                </figure>
+            </div>
+            <div class="content-block">
+
+                <h1>Scan to Win</h1>
+                <p>Guaranteed prizes and a chance to win<br>the <strong>Gold Fortuna Bar</strong> to everyone!</p>
+                <p>Get lucky!</p>
+
             </div>
         </section>
         <section class="egvent-welcome-forma">
