--- a/appZapp/tests-article-grid.html
+++ b/appZapp/tests-article-grid.html
@@ -62,219 +62,7 @@
 <body class="body-wrap design-template">
 
     <style>
-        .test-grid {
-            /* grid seed */
-            display:         grid;
-            align-items:     start;
-            grid-auto-flow:  row;
-            grid-auto-rows:  min-content;
-            grid-column-gap: 0;
-            grid-row-gap:    var(--grid-base--row-gap);
 
-            --grid-formula--empty-sidespace: 0;
-            --grid-formula--content-padding: 1rem;
-            --grid-formula--west-width:      var(--grid-base--sidenote-width);
-            --grid-formula--east-width:      var(--grid-base--sidenote-width);
-            --grid-formula--main-width:      var(--grid-base--contenta-width);
-            --grid-formula--main-width:      auto;
-
-
-            --grid-formula--start: [full-start] var(--grid-formula--empty-sidespace);
-            --grid-formula--end:   var(--grid-formula--empty-sidespace) [full-end];
-
-            --grid-formula--west-skip: 0;
-            --grid-formula--east-skip: 0;
-            --grid-formula--west-insert:
-                0
-                    [overwest-start]
-                        var(--grid-formula--content-padding)
-                            [west-start]
-                                var(--grid-formula--west-width)
-                            [west-end]
-                        var(--grid-formula--content-padding)
-                    [overwest-end]
-                0;
-            --grid-formula--east-insert:
-                0
-                    [overeast-start]
-                        var(--grid-formula--content-padding)
-                            [east-start]
-                                var(--grid-formula--east-width)
-                            [east-end]
-                        var(--grid-formula--content-padding)
-                    [overeast-end]
-                0;
-
-            --grid-formula--main-single:
-                0
-                    [overmain-start]
-                        var(--grid-formula--content-padding)
-                            [main-start]
-                                var(--grid-formula--main-width)
-                            [main-end]
-                        var(--grid-formula--content-padding)
-                    [overmain-end]
-                0;
-
-            --grid-formula--main-join-all:
-                0
-                    [overmain-start overwest-start overeast-start]
-                        var(--grid-formula--content-padding)
-                            [main-start west-start east-start]
-                                var(--grid-formula--main-width)
-                            [main-end   west-end   east-end]
-                        var(--grid-formula--content-padding)
-                    [overmain-end   overwest-end   overeast-end]
-                0;
-
-            --grid-formula--main-join-east:
-                0
-                    [overmain-start overeast-start]
-                        var(--grid-formula--content-padding)
-                            [main-start east-start]
-                                var(--grid-formula--main-width)
-                            [main-end   east-end]
-                        var(--grid-formula--content-padding)
-                    [overmain-end   overeast-end]
-                0;
-
-            --grid-formula--main-join-west:
-                0
-                    [overmain-start overwest-start]
-                        var(--grid-formula--content-padding)
-                            [main-start west-start]
-                                var(--grid-formula--main-width)
-                            [main-end   west-end]
-                        var(--grid-formula--content-padding)
-                    [overmain-end   overwest-end]
-                0;
-
-            --grid-part--START:          var(--grid-formula--start);
-            --grid-part--WEST:           var(--grid-formula--west-skip);
-            --grid-part--MAIN:           var(--grid-formula--main-join-all);
-            --grid-part--MAIN-join-WEST: var(--grid-formula--main-join-all);
-            --grid-part--MAIN-join-EAST: var(--grid-formula--main-join-all);
-            --grid-part--MAIN-join-ALL:  var(--grid-formula--main-join-all);
-            --grid-part--EAST:           var(--grid-formula--east-skip);
-            --grid-part--END:            var(--grid-formula--end);
-
-
-            --grid-template--default:
-                var(--grid-part--START)
-                var(--grid-part--WEST)
-                var(--grid-part--MAIN)
-                var(--grid-part--EAST)
-                var(--grid-part--END);
-
-            --grid-template--content-block:
-                [full-start overwest-start overeast-start overmain-start main-start west-start east-start]
-                    auto
-                [full-end   overwest-end   overeast-end   overmain-end   main-end   west-end   east-end];
-
-            --grid-template--content-box:
-                [full-start overwest-start overeast-start overmain-start]
-                    var(--grid-formula--content-padding)
-                        [main-start west-start east-start]
-                            auto
-                        [main-end   west-end   east-end]
-                    var(--grid-formula--content-padding)
-                [full-end   overwest-end   overeast-end   overmain-end];
-
-            grid-template-columns: var(--grid-template--default);
-        }
-        .test-grid .article-block-west { grid-column: west; }
-        .test-grid .article-block-east  { grid-column: east; }
-        .test-grid .article-block-main  { grid-column: main; }
-        .test-grid .article-box-west  { grid-column: overwest; }
-        .test-grid .article-box-east  { grid-column: overeast; }
-        .test-grid .article-box-main  { grid-column: overmain; }
-
-        .test-grid .article-westside { grid-column: full-start / overwest-end; }
-        .test-grid .article-eastside { grid-column: overeast-start / full-end; }
-
-        .test-grid .article-block-merge { grid-column: west-start / east-end; }
-        .test-grid .article-block-merge-west { grid-column: west-start / main-end; }
-        .test-grid .article-block-merge-east { grid-column: main-start / east-end; }
-
-        .test-grid .article-box-merge { grid-column: overwest-start / overeast-end; }
-        .test-grid .article-box-merge-west { grid-column: overwest-start / overmain-end; }
-        .test-grid .article-box-merge-east { grid-column: overmain-start / overeast-end; }
-
-        .test-grid .article-block-merge,
-        .test-grid .article-block-merge-west,
-        .test-grid .article-block-merge-east,
-        .test-grid .article-block-west,
-        .test-grid .article-block-east,
-        .test-grid .article-block-main {
-            /* grid seed */
-            display:         grid;
-            align-items:     start;
-            grid-auto-flow:  row;
-            grid-auto-rows:  min-content;
-            grid-column-gap: 0;
-            grid-row-gap:    var(--grid-base--row-gap);
-
-            grid-template-columns: var(--grid-template--content-block);
-        }
-
-        .test-grid .article-box-merge,
-        .test-grid .article-box-merge-west,
-        .test-grid .article-box-merge-east,
-        .test-grid .article-westside,
-        .test-grid .article-eastside,
-        .test-grid .article-box-west,
-        .test-grid .article-box-east,
-        .test-grid .article-box-main {
-            /* grid seed */
-            display:         grid;
-            align-items:     start;
-            grid-auto-flow:  row;
-            grid-auto-rows:  min-content;
-            grid-column-gap: 0;
-            grid-row-gap:    var(--grid-base--row-gap);
-
-            grid-template-columns: var(--grid-template--content-box);
-        }
-
-        .article-chapter:not(.is-on-top) { margin-top: calc( 2 * var(--grid-base--row-gap) ); }
-        .article-chapter:not(.is-on-bottom) { margin-bottom: calc( 2 * var(--grid-base--row-gap) ); }
-
-        .test-grid .content-block {
-            /* grid seed */
-            display:         grid;
-            align-items:     start;
-            grid-auto-flow:  row;
-            grid-auto-rows:  min-content;
-            grid-column-gap: 0;
-            grid-row-gap:    var(--grid-base--row-gap);
-
-            grid-template-columns: var(--grid-template--content-block);
-        }
-
-        @media all and (min-width: 37rem) {
-            .test-grid {
-            --grid-formula--empty-sidespace: minmax(0, 1fr);
-            --grid-formula--main-width:      35rem;
-            }
-        }
-        @media all and (min-width: 55rem) {
-            .test-grid {
-            --grid-part--EAST:           var(--grid-formula--east-insert);
-            --grid-part--MAIN:           var(--grid-formula--main-join-west);
-            --grid-part--MAIN-join-WEST: var(--grid-formula--main-join-west);
-            }
-        }
-        @media all and (min-width: 73rem) {
-            .test-grid {
-            --grid-part--WEST:           var(--grid-formula--west-insert);
-            --grid-part--MAIN:           var(--grid-formula--main-single);
-            --grid-part--MAIN-join-EAST: var(--grid-formula--main-join-east);
-            }
-        }
-
-        .test-grid * {
-            grid-column: main;
-        }
         .huge-title {
             font-size: 4em;
             line-height: 1;
@@ -282,77 +70,102 @@
         .color-text {
             color: var(--mark-text-color);
         }
-        .test-grid .color-box {
-            padding-top:    calc( 1 * var(--grid-base--row-gap) );
-            padding-bottom: calc( 1 * var(--grid-base--row-gap) );
-        }
-        .has-devlabels [class^="article-"]:hover {
-            position: relative;
-            outline: 2px firebrick solid;
-        }
-        .has-devlabels [class^="article-"]:hover::before {
-            content: attr(class);
-            position: absolute;
-            z-index: 2;
-            top:50%;
-            left: 50%;
-            transform: translate(-50%,-50%);
-            max-width: 92%;
-            font-size: 1.5em;
-            line-height: 1;
-            color: firebrick;
-            padding: 0.5rem;
-        }
-        .has-devlabels [class^="article-"]:hover::after {
-            content: '';
-            position: absolute;
-            z-index: 1;
-            top:  0;
-            left: 0;
-            width:  100%;
-            height: 100%;
-            background-color: rgba(255,255,255,0.9);
-        }
+        dl { margin: 0; }
+        dd { padding-bottom: 1rem; }
     </style>
 
-    <article class="test-grid article-chapter">
+    <article class="article-grid article-chapter">
         <header class="article-block-merge">
             <h1 class="huge-title">Article grid usecases</h1>
             <p class="subtitle">2019.7.11</p>
         </header>
 
         <h2 class="title">Mission</h2>
-        <ul class="content-block">
+        <ul class="article-block">
             <li>Упростить вёрстку статей с большим количеством элементов оформления</li>
             <li>Конструктор для уникальных вставок. Чтобы любой креатив вписывался в сетку.</li>
             <li>Трёхколоночная модель — текст и примечания по обеим сторонам</li>
             <li>Автоматическая адаптация под все экраны</li>
         </ul>
 
+        <hr>
+
+        <section class="article-block-west">
+            <h2 class="title">Terms</h2>
+            <ul class="article-block">
+                <li><strong>main</strong> — main column</li>
+                <li><strong>west</strong> — left column</li>
+                <li><strong>east</strong> — right column</li>
+                <li><strong>block</strong> — plain text content</li>
+                <li><strong>box</strong> — content with paddings (used with background-color)</li>
+            </ul>
+        </section>
+
+        <section class="article-block">
+            <h2 class="title">CSS Classes</h2>
+            <dl>
+                <dt><strong>article-grid</strong></dt>
+                <dd>— parent</dd>
+
+                <dt><strong>article-block</strong></dt>
+                <dt><strong>article-box</strong></dt>
+                <dd>— main content</dd>
+
+
+                <dt><strong>article-block-west</strong></dt>
+                <dt><strong>article-block-east</strong></dt>
+                <dt><strong>article-box-west</strong></dt>
+                <dt><strong>article-box-east</strong></dt>
+                <br>
+
+                <dt><strong>article-eastside</strong></dt>
+                <dt><strong>article-westside</strong></dt>
+                <dd>— continues to screen borders</dd>
+
+                <dt><strong>article-block-merge</strong></dt>
+                <dt><strong>article-box-merge</strong></dt>
+                <dd>— merge all three columns</dd>
+
+                <dt><strong>article-block-merge-west</strong></dt>
+                <dt><strong>article-block-merge-east</strong></dt>
+                <dt><strong>article-box-merge-west</strong></dt>
+                <dt><strong>article-box-merge-east</strong></dt>
+                <br>
+
+                <dt><strong>keep-grid</strong></dt>
+                <dd>— additional class for columns</dd>
+            </dl>
+        </section>
+
     </article>
 
-    <article class="test-grid article-chapter has-devlabels">
-        <header>
-            <h2 class="big-title">Components</h2>
+    <article class="article-grid article-chapter has-devlabels">
+        <header class="article-box-merge color-box">
+            <h2 class="big-title">Test Grid</h2>
         </header>
+
+        <div class="title">Blocks</div>
 
         <div class="article-block-west color-text"><p class="auto"></p></div>
         <div class="article-block-main">
+            <div>The user asked Petrovich to do something with some scientific data. It responds first by plotting the data and printing it. Since this is not what the user wanted, he punishes Petrovich, then tries again.<hr class="single-line">Manual space break with HR.</div>
             <p class="auto"></p>
             <p class="auto"></p>
             <p class="auto"></p>
         </div>
         <div class="article-block-east color-text"><p class="auto"></p></div>
 
+        <div class="title">Boxes</div>
+
         <div class="article-box-west color-box"><p class="auto"></p></div>
-        <div class="article-block-main">
+        <div class="article-box-main color-box">
             <p class="auto"></p>
             <p class="auto"></p>
             <p class="auto"></p>
         </div>
         <div class="article-box-east color-box"><p class="auto"></p></div>
-        <div class="article-box-main color-box"><p class="auto"></p></div>
-        <p class="auto"></p>
+
+        <div class="title">Screen Sides</div>
 
         <div class="article-westside color-box"><p class="auto"></p></div>
         <div class="article-block-main">
@@ -362,20 +175,51 @@
         </div>
         <div class="article-eastside color-box color-text"><p class="auto"></p></div>
 
+        <div class="title">Screen Sides + Keep Grid</div>
+
+        <div class="article-westside keep-grid color-box"><p class="auto"></p></div>
+        <div class="article-block-main">
+            <p class="auto"></p>
+            <p class="auto"></p>
+            <p class="auto"></p>
+        </div>
+        <div class="article-eastside keep-grid color-box color-text"><p class="auto"></p></div>
+
+        <div class="title">Merge East</div>
+
         <div class="article-box-merge-east color-box"><p class="auto"></p></div>
         <div class="article-block-merge-east">
             <p class="auto"></p>
             <p class="auto"></p>
         </div>
+        <div class="article-box-merge-east keep-grid color-box">
+            <p class="auto"></p>
+            <div class="article-block-east"><p class="auto"></p></div>
+        </div>
+
+        <div class="title">Merge Both Sides</div>
+
         <div class="article-box-merge color-box"><p class="auto"></p></div>
         <div class="article-block-merge">
             <p class="auto"></p>
             <p class="auto"></p>
             <p class="auto"></p>
         </div>
+        <div class="article-box-merge keep-grid color-box">
+            <div class="article-block-west"><p class="auto"></p></div>
+            <p class="auto"></p>
+            <div class="article-block-east"><p class="auto"></p></div>
+        </div>
+
+        <div class="title">Merge West</div>
+
         <div class="article-box-merge-west color-box"><p class="auto"></p></div>
         <div class="article-block-merge-west">
             <p class="auto"></p>
+            <p class="auto"></p>
+        </div>
+        <div class="article-box-merge-west keep-grid color-box">
+            <div class="article-block-west"><p class="auto"></p></div>
             <p class="auto"></p>
         </div>
 
