--- a/appZapp/tests-article-grid.html
+++ b/appZapp/tests-article-grid.html
@@ -90,17 +90,6 @@
 
         <hr>
 
-        <section class="article-block-west">
-            <h2 class="title">Terms</h2>
-            <ul class="article-block">
-                <li><strong>main</strong> — main column</li>
-                <li><strong>west</strong> — left column</li>
-                <li><strong>east</strong> — right column</li>
-                <li><strong>block</strong> — plain text content</li>
-                <li><strong>box</strong> — content with paddings (used with background-color)</li>
-            </ul>
-        </section>
-
         <section class="article-block">
             <h2 class="title">CSS Classes</h2>
             <dl>
@@ -137,11 +126,22 @@
             </dl>
         </section>
 
+        <section class="article-block-east">
+            <h2 class="title">Terms</h2>
+            <ul class="article-block">
+                <li><strong>main</strong> — main column</li>
+                <li><strong>west</strong> — left column</li>
+                <li><strong>east</strong> — right column</li>
+                <li><strong>block</strong> — plain text content</li>
+                <li><strong>box</strong> — content with paddings (used with background-color)</li>
+            </ul>
+        </section>
+
     </article>
 
     <article class="article-grid article-chapter has-devlabels">
         <header class="article-box-merge color-box">
-            <h2 class="big-title">Test Grid</h2>
+            <h2 class="big-title">Test Components</h2>
         </header>
 
         <div class="title">Blocks</div>
@@ -214,10 +214,12 @@
         <div class="title">Merge West</div>
 
         <div class="article-box-merge-west color-box"><p class="auto"></p></div>
+        <div class="article-block-east"><p class="auto"></p></div>
         <div class="article-block-merge-west">
             <p class="auto"></p>
             <p class="auto"></p>
         </div>
+        <div class="article-block-east"><p class="auto"></p></div>
         <div class="article-box-merge-west keep-grid color-box">
             <div class="article-block-west"><p class="auto"></p></div>
             <p class="auto"></p>
