font tool wakamai

--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -330,7 +330,10 @@
             </section>
 
             <section c-dev3>
-                <a href="https://fonts.google.com/?subset=cyrillic"><i>GFonts</i></a>
+                <figure>
+                    <a href="https://fonts.google.com/?subset=cyrillic"><i>GFonts</i></a>
+                    <a href="https://wakamaifondue.com/">wakamai</a>
+                </figure>
                 <figure>
                     <a c href="https://material.io/tools/icons/?style=baseline"><i>Material</i></a>
                     <a b href="https://icomoon.io/app/#/select"><i>icomoon</i></a>
