--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -165,6 +165,7 @@
         </section>
         <section c-news3>
             <a href="http://lurkmore.ru/%D0%A1%D0%BB%D1%83%D0%B6%D0%B5%D0%B1%D0%BD%D0%B0%D1%8F:Random"><i>lurkmore</i></a>
+            <a href="https://etika.nplus1.ru/">Новая Этика</a>
             <a href="http://arzamas.academy/"><i>arzamas</i></a>
             <a href="http://www.kommersant.ru/rubric/5"><i>Kommersant.ru</i></a>
         </section>
@@ -202,9 +203,12 @@
             <a c href="https://docs.google.com/spreadsheets/d/1HTR7rIFXDrdoKvsxA0lCfX9cyU30wOdGZgSIt52kjHw/edit#gid=787233722">имя еды</a>
             <figure>
                 <a dat href="https://buildxa.egamings.com/">jenkins</a>
-                <a dat href="https://kibana.egamings.com/app/kibana#/discover/PHP-errors?_g=(refreshInterval:(display:Off,pause:!f,value:0),time:(from:now-7d,mode:quick,to:now))&_a=(columns:!(syslog_program,syslog_message),filters:!(),index:'phplog-*',interval:auto,query:(query_string:(analyze_wildcard:!t,query:'syslog_program:*php%20AND%20syslog_message:*softgamings*')),sort:!('@timestamp',desc))">
+                <a dat href="https://kibana6.egamings.com/goto/1842b03589e257014c78102a75833acc">
         Kabana PhpLog</a>
             </figure>
+            <span a c>
+                source: *gaminglicensingcom_test*
+            </span>
             <figure>
                 <a dat href="https://my.livechatinc.com/chats">Live Chat</a>
                 <a dat href="https://softgamings2.pipedrive.com/mail/inbox">PipeDrive</a>
