--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -127,6 +127,7 @@
         <section c-eg2>
             <a href="http://gumilevica.kulichki.net/HE2/index.html">Лев Гумилёв: История</a>
             <a href="http://geacron.com/home-en/" class=""><i>History Atlas</i></a>
+            <a href="https://cesiumjs.org/">Geo Satellite</a>
         </section>
         <section c-eg3>
             <span a c>Ss ▲▼◄► ‹› ←→ ↔ ⚠ ☑</span>
