--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -179,6 +179,7 @@
         </section>
         <section c-dev3>
             <a href="https://medium.com/level-up-web/best-podcasts-about-web-design-web-development-2f14d2519bc6"><i>♪ Dev Podcasts</i></a>
+            <a href="https://poolside.fm/"><i>♪ Poolside Web-Chill</i></a>
         </section>
     </atricle>
 
