--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -126,9 +126,9 @@
             <a href="https://biomolecula.ru/"><i>biomolecula.ru</i></a>
             <a href="https://nplus1.ru/"><i>n+1</i></a>
             <a href="https://golovanov.net/">golovanov.net</a>
+            <a b href="http://tabletopwhale.com/index.html">Science Illustr.</a>
         </section>
         <section c-eg2>
-            <a href="http://gumilevica.kulichki.net/HE2/index.html">Лев Гумилёв: История</a>
             <a href="http://geacron.com/home-en/" class=""><i>History Atlas</i></a>
             <a href="https://cesiumjs.org/">Geo Satellite</a>
         </section>
@@ -139,7 +139,6 @@
                 <a href="https://en.wikipedia.org/wiki/List_of_Unicode_characters">W</a>
                 <span> Māčūļī 💩 ⁐ </span>
             </span>
-
             <figure>
                 <span a c>ʕ⊙ᴥ⊙ʔ</span><span a c>༼°▽°༽</span>
             </figure>
@@ -166,6 +165,7 @@
             <a href="http://langsam.ru/ris/">RIS design blog</a>
             <a href="http://thisisnthappiness.com/archive">thisisnthappiness</a>
             <a href="http://svalko.org/"><i>Свалка</i></a>
+            <a href="http://gumilevica.kulichki.net/HE2/index.html">Лев Гумилёв: История</a>
         </section>
         <section c-news3>
             <a href="http://lurkmore.ru/%D0%A1%D0%BB%D1%83%D0%B6%D0%B5%D0%B1%D0%BD%D0%B0%D1%8F:Random"><i>lurkmore</i></a>
