maps and hacker

--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -129,8 +129,10 @@
             <a b href="http://tabletopwhale.com/index.html">Science Illustr.</a>
         </section>
         <section c-eg2>
-            <a href="http://geacron.com/home-en/" class=""><i>History Atlas</i></a>
-            <a href="https://cesiumjs.org/">Geo Satellite</a>
+            <span a c>sheepcity/wer1</span>
+            <a href="http://geacron.com/home-en/">Gea Cron Maps</a>
+            <a href="https://www.the-map-as-history.com/">Map as History</a>
+            <a href="https://cesiumjs.org/">Earth Satellite</a>
         </section>
         <section c-eg3>
             <span a c>Ss ▲▼◄► ‹› ←→ ↔ ⚠ ☑</span>
@@ -187,7 +189,7 @@
     <!-- =================================================== [PROJECTS] -->
     <atricle c-prj1>
         <section c-prj0>
-            <a c href="eg.html">[ EG ]</a>
+            <a b c href="http://hackertyper.com/">[ Hacker Typer ]</a>
         </section>
         <section c-eg1>
             <figure>
