small triangles chars

--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -135,8 +135,9 @@
             <a href="https://cesiumjs.org/">Earth Satellite</a>
         </section>
         <section c-eg3>
-            <span a c>Ss ▲▼◄► ‹› ←→ ↔ ⚠ ☑</span>
-            <span a c>Ss ※⁜⁕★⋆∘⚙ ∗⁎ ⁑ ⁂</span>
+            <span a c> ◈◇ ◾◽ ‹› ←→ ↔ ⚠ ☑ </span>
+            <span a c> ▲▼◄► ▾ ▿ ◂ ◃ ▸ ▹ ▴ ▵ </span>
+            <span a c> ※⁜⁕★⋆∘⚙ ∗⁎ ⁑ ⁂ </span>
             <span a c>
                 <a href="https://en.wikipedia.org/wiki/List_of_Unicode_characters">W</a>
                 <span> Māčūļī 💩 ⁐ </span>
