--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -117,7 +117,7 @@
             </figure>
             <figure>
                 <a href="http://www.biathlonworld.com/calendar/">IBU Calendar</a>
-                <a href="http://www.eurovisionsports.tv/ibu/">IBU TV</a>
+                <a b href="http://www.eurovisionsports.tv/ibu/">IBU TV</a>
             </figure>
             <a mini href="http://www.european-athletics.org/calendar/index.html"><i>european athletics calendar</i></a>
         </section>
@@ -129,8 +129,11 @@
             <a b href="http://tabletopwhale.com/index.html">Science Illustr.</a>
         </section>
         <section c-eg2>
-            <span a c>sheepcity/wer1</span>
-            <a href="http://geacron.com/home-en/">Gea Cron Maps</a>
+            <figure>
+                <a href="http://geacron.com/home-en/">Gea Cron Maps</a>
+                <span a mini>sheepcity/wer1</span>
+            </figure>
+            
             <a href="https://www.the-map-as-history.com/">Map as History</a>
             <a href="https://cesiumjs.org/">Earth Satellite</a>
         </section>
@@ -142,8 +145,14 @@
                 <a href="https://en.wikipedia.org/wiki/List_of_Unicode_characters">W</a>
                 <span> Māčūļī 💩 ⁐ </span>
             </span>
-            <figure>
+        </section>
+        <section c-hq>
+            <figure dh>
                 <span a c>ʕ⊙ᴥ⊙ʔ</span><span a c>༼°▽°༽</span>
+            </figure>
+            <figure>
+                <a c href="dvBookmarks2018.html"><i>dvTul</i></a>
+                <a c href="inet2018.html"><i>inet</i></a>
             </figure>
         </section>
     </article>
@@ -252,10 +261,6 @@
                 <a c href="https://devlo.gaminglicensing.com:23443/page/wp/wp-admin/">DEV</a>
             </figure>
             <a c href="https://vcsxa.egamings.com/wpsites/gaminglicensingcom">GamingLicensing vcsxa</a>
-            <figure>
-                <a href="https://www.gaminglicensing.com/administration/">zend prod</a>
-                <a min href="https://test.gaminglicensing.com/administration/">⋅test</a>
-            </figure>
         </section>
         <section c-eg4>
             <figure>
@@ -272,14 +277,34 @@
             </figure>
             <a c href="https://vcsxa.egamings.com/wpsites/egamings">Egamings vcsxa</a>
         </section>
-        <a href="https://devxatest.egamings.com:23443/static/editor-manual/article-base.html">editor manual SG1</a>
-        <a c b href="https://devxatest.egamings.com:23443/static/zl/zlEpic/appZapp/devlog.html">devXa devlog</a>
 
     </atricle>
 
     <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
     <!-- =================================================== [LAST] -->
     <article c-dev>
+        <section c-science>
+            <figure>
+                <a href="https://www.textfixer.com/html/convert-text-html.php"><i>Text··HTML</i></a>
+                <a href="https://www.textfixer.com/html/html-to-text.php"><i>HTML··Text</i></a>
+            </figure>
+            <figure>
+                <a href="https://www.textfixer.com/tools/alphabetical-order.php"><i>Text··ABC order</i></a>
+                <a href="https://www.textfixer.com/html/"><i>···</i></a>
+            </figure>
+            <figure>
+                <a href="https://yoksel.github.io/url-encoder/"><i>svg··css</i></a>
+                <a href="http://b64.io/" class="red"><i>img··base64</i></a>
+            </figure>
+            <figure>
+                <a href="https://cloudconvert.com/website-to-pdf"><i>url··pdf</i></a>
+                <a href="https://cloudconvert.com/ai-to-svg"><i>ai··svg</i></a>
+                <a href="https://cloudconvert.com/formats"><i>···</i></a>
+            </figure>
+            <figure>
+                <a href="https://codepen.io/sosuke/full/Pjoqqp"><i>color··css filters</i></a>
+            </figure>
+        </section>
         <section c-dev>
             <figure>
                 <a href="https://www.w3schools.com/tags/default.asp"><i>HTML</i></a>
@@ -291,24 +316,12 @@
                 <a href="https://www.w3counter.com/globalstats.php"><i>Global stats</i></a>
             </figure>
             <figure>
-                <a href="https://yoksel.github.io/url-encoder/"><i>SVG→CSS-encoder</i></a>
-                <a href="http://b64.io/" class="red"><i>base64</i></a>
-            </figure>
-            <figure>
                 <a href="https://jakearchibald.github.io/svgomg/">Optimize SVG</a>
                 <a href="https://tinypng.com/">PNG</a>
                 <a href="https://online2pdf.com/">PDF</a>
             </figure>
-            <figure>
-                <a href="https://cloudconvert.com/website-to-pdf"><i>url·pdf</i></a>
-                <a href="https://cloudconvert.com/ai-to-svg"><i>ai·svg</i></a>
-                <a href="https://cloudconvert.com/formats"><i>...</i></a>
-            </figure>
-
-            <figure>
-                <a href="dvBookmarks2018.html"><i>dvTul</i></a>
-                <a href="inet2018.html"><i>inet</i></a>
-            </figure>
+        </section>
+        <section c-dev>
 
             <figure>
                 <a href="http://www.colourlovers.com/palettes/most-loved/all-time/meta">Colour ♥</a>
@@ -331,14 +344,6 @@
                 </figure>
                 <a href="https://www.10bestdesign.com/dirtymarkup/"><i>Beautify</i></a>
                 <a href="https://www.diffchecker.com/"><i>Diff checker</i></a>
-                <figure>
-                    <a href="https://www.textfixer.com/html/convert-text-html.php"><i>Text→HTML</i></a>
-                    <a href="https://www.textfixer.com/html/html-to-text.php"><i>HTML→Text</i></a>
-                </figure>
-                <figure>
-                    <a href="https://www.textfixer.com/tools/alphabetical-order.php"><i>Text→ABC order</i></a>
-                    <a href="https://www.textfixer.com/html/"><i>…</i></a>
-                </figure>
             </section>
 
             <section c-dev3>
