parcel plus vue try one

--- a/appDev/ParcelBundler/src/third.html
+++ b/appDev/ParcelBundler/src/third.html
@@ -30,9 +30,8 @@
 
     <!-- ========================================= APP -->
 
-    <!-- App Core -->
-    <script src="app/script/app.js"  defer></script>
-    <script src="app/script/app-vue.js"      ></script>
+
+    <script defer src="app/script/app.js"></script>
 
 
     <!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
@@ -40,22 +39,18 @@
 </head>
 <body>
 
-    <h1>Ready</h1>
-    <h2>Go import!</h2>
+    <h1>Second page</h1>
     <figure class="icon-grid">
         <svg><use href="art/icons/component-icon--article-grid.svg"/></svg>
         <svg><use href="art/icons/component-icon--banners.svg"/></svg>
         <svg><use href="art/icons/component-icon--catgrounds.svg"/></svg>
         <svg><use href="art/icons/component-icon--ofsidebar.svg"/></svg>
     </figure>
-<!--    <section>
-        <ul hidden>
-            <li><a href="second.html">Second page</a></li>
-            <li><a href="third.html">Third page</a></li>
+    <section>
+        <ul>
+            <li><a href="index.html">Home</a></li>
         </ul>
-    </section>-->
-
-    <div id="app"></div>
+    </section>
 
 </body>
 </html>
