--- a/appDev/vuecliapp/public/index.html
+++ b/appDev/vuecliapp/public/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vuecliapp</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but vuecliapp doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+
+    <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
+    <!-- =================================================== [CONTENT] -->
+
+
+        <!-- MAIN -->
+        <title>vuecliapp</title>
+        <meta name="description" content="xoxox_descriptionTEMPLATE_xoxox" />
+        <meta name="author"      content="zl" />
+
+        <!-- FAVICON -->
+        <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+
+    <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
+    <!-- =================================================== [DESIGN] -->
+
+
+    <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
+    <!-- =================================================== [APP] -->
+
+
+    </head>
+    <body>
+        <noscript>
+            <p>No script!</p>
+        </noscript>
+        <div id="app"></div>
+    </body>
 </html>
