--- a/Snippets/svg.html
+++ b/Snippets/svg.html
@@ -9,6 +9,10 @@
 
 <path vector-effect="non-scaling-stroke"/>
 
+<!-- template -->
+
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><polygon points="4 4, 20 4, 12 16"/></svg>
+
 
 <!-- ==================================================== Gradient Sample -->
 
