--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -181,6 +181,7 @@
         </section>
         <section c-news3>
             <a href="http://lurkmore.ru/%D0%A1%D0%BB%D1%83%D0%B6%D0%B5%D0%B1%D0%BD%D0%B0%D1%8F:Random"><i>lurkmore</i></a>
+            <a href="https://posmotre.li/%D0%A1%D0%BB%D1%83%D0%B6%D0%B5%D0%B1%D0%BD%D0%B0%D1%8F:%D0%A1%D0%BB%D1%83%D1%87%D0%B0%D0%B9%D0%BD%D0%B0%D1%8F_%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0"><i>posmotre.li</i></a>
             <a href="https://etika.nplus1.ru/">Новая Этика</a>
             <a href="http://arzamas.academy/"><i>arzamas</i></a>
             <a href="http://www.kommersant.ru/rubric/5"><i>Kommersant.ru</i></a>
@@ -190,7 +191,10 @@
             <a href="http://www.diary.ru/~musicbunker/"><i>♪ Folk</i></a>
         </section>
         <section c-dev3>
-            <a href="https://medium.com/level-up-web/best-podcasts-about-web-design-web-development-2f14d2519bc6"><i>♪ Dev Podcasts</i></a>
+           <figure>
+               <a href="https://medium.com/level-up-web/best-podcasts-about-web-design-web-development-2f14d2519bc6"><i>♪ Dev Podcasts</i></a>
+               <a href="https://shoptalkshow.com/"><i>CTS</i></a>
+           </figure>
             <a href="https://poolside.fm/"><i>♪ Poolside Web-Chill</i></a>
         </section>
     </atricle>
