--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -281,6 +281,9 @@
             </figure>
             <a c href="https://vcsxa.egamings.com/wpsites/egamings">Egamings vcsxa</a>
         </section>
+        <section c-eg1>
+            <a c href="https://vcsxa.egamings.com/wpsites/miraxcompany">MIRAX vcsxa</a>
+        </section>
 
     </atricle>
 
