--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -141,10 +141,11 @@
             <span a c> ◈◇ ◾◽ ‹› ←→ ↔ ⚠ ☑ </span>
             <span a c> ▲▼◄► ▾ ▿ ◂ ◃ ▸ ▹ ▴ ▵ </span>
             <span a c> ※⁜⁕★⋆∘⚙ ∗⁎ ⁑ ⁂ </span>
-            <span a c>
-                <a href="https://en.wikipedia.org/wiki/List_of_Unicode_characters">W</a>
-                <span> Māčūļī 💩 ⁐ </span>
-            </span>
+            <figure>
+                <a b href="https://unilist.raphaelbastide.com/">U</a>
+                <a c href="https://en.wikipedia.org/wiki/List_of_Unicode_characters">W</a>
+                <span a c> Māčūļī 💩 ⁐ </span>
+            </figure>
         </section>
         <section c-hq>
             <figure dh>
