--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -127,6 +127,7 @@
             <a href="https://nplus1.ru/"><i>n+1</i></a>
             <a href="https://golovanov.net/">golovanov.net</a>
             <a b href="http://tabletopwhale.com/index.html">Science Illustr.</a>
+            <a b href="http://parismuseescollections.paris.fr/en">Paris Museums Imgs.</a>
         </section>
         <section c-eg2>
             <figure>
